hard-gists/8af030b2dd654273c5bc/run.log
=== Docker Run Log for 8af030b2dd654273c5bc ===
Started at: Mi 29. Okt 18:07:36 CET 2025

[2025-10-29 18:07:37] START: Running container for 8af030b2dd654273c5bc
[2025-10-29 18:07:37] SUCCESS: Container 10ef8a6d8fe517df7d4f6599ee051943b6691a0c81b4a2e6a7a9acede2082cdf started for 8af030b2dd654273c5bc
=== Container logs for 8af030b2dd654273c5bc ===
  File "/snippet.py", line 166
    print 'COMPILING'
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8af030b2dd654273c5bc ===
[2025-10-29 18:07:39] INFO: Container 10ef8a6d8fe517df7d4f6599ee051943b6691a0c81b4a2e6a7a9acede2082cdf has stopped
